Text界面和一些方法已经完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Memo</string>
+    <string name="add_text">add_text</string>
+    <string name="urgent">urgent</string>
+    <string name="edit_title_hint">请输入题目</string>
+    <string name="edit_content_hint">请输入内容</string>
 </resources>
