--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="text_clock">口</string>
     <string name="text_color">T</string>
     <string name="text_confirm">√</string>
+    <string name="alarm_clock">Alarm Clock</string>
 </resources>
