--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Memo</string>
     <string name="add_text">add_text</string>
     <string name="urgent">urgent</string>
-    <string name="edit_title_hint">请输入题目</string>
-    <string name="edit_content_hint">请输入内容</string>
+    <string name="edit_title_hint">Please input title of text</string>
+    <string name="edit_content_hint">Please input content of text</string>
     <string name="text_cancel">×</string>
     <string name="text_clock">口</string>
     <string name="text_color">T</string>
