--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="text_color">T</string>
     <string name="text_confirm">√</string>
     <string name="alarm_clock">Alarm Clock</string>
+
+    <string name="memo_addtask">"Add Task"</string>
 </resources>
