--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
     <string name="calendar_friday">Fri</string>
     <string name="calendar_saturday">Sat</string>
     <string name="title_date">%1$s  %2$dth,%3$d</string>
+
+    <string name="audio">audio</string>
+    <string name="edit_title_hint_audio">Please input title of audio</string>
+    <string name="audio_rerecording">rerecording</string>
+    <string name="audio_recording">recording</string>
+    <string name="audio_recording_initTime">00:00</string>
+    <string name="audio_recording_btnText">press here to record</string>
 </resources>
