--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
     <string name="audio_recording">recording</string>
     <string name="audio_recording_initTime">00:00</string>
     <string name="audio_recording_btnText">press here to record</string>
+    <string name="task">Task</string>
+    <string name="note">Note</string>
+    <string name="list">List</string>
+    <string name="list_icon">+</string>
+    <string name="list_new">Add a new list</string>
+    <string name="task_new">Add a new task</string>
+    <string name="note_new">Add a new note</string>
 </resources>
