Add a click event to the calendar event list and the main of list interface is basically completed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="list_new">Add a new list</string>
     <string name="task_new">Add a new task</string>
     <string name="note_new">Add a new note</string>
+
+    <string name="list_finish">√</string>
 </resources>
