--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="note_new">Add a new note</string>
 
     <string name="list_finish">√</string>
+    <string name="please_input_title_of_list">Please input title of list</string>
 </resources>
