Data transfer between listActivity and MainActivity and expansion list of item has been completed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
 
     <string name="list_finish">√</string>
     <string name="hint_list_title">please input title of list</string>
+    <string name="list_launches_icon">List launches Icon</string>
 </resources>
