--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,13 @@
     <string name="list_new">Add a new list</string>
     <string name="task_new">Add a new task</string>
     <string name="note_new">Add a new note</string>
+    <string name="item_new">Add a new item</string>
 
     <string name="list_finish">√</string>
     <string name="hint_list_title">please input title of list</string>
     <string name="list_launches_icon">List launches Icon</string>
+    <string name="cancer">Cancer</string>
+    <string name="confirm">Confirm</string>
+    <string name="state">State</string>
+    <string name="title">Title</string>
 </resources>
