--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="confirm">Confirm</string>
     <string name="state">State</string>
     <string name="title">Title</string>
+    <string name="item_content">Please input content of item</string>
 </resources>
