main page development

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,8 @@
     <string name="title">title</string>
     <string name="item">item</string>
 
+    <!--main string-->
+    <string name="main_add_task">Add a new task</string>
+    <string name="main_add_list">Add a new list</string>
+    <string name="main_add_note">Add a new note</string>
 </resources>
