--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,8 @@
     <string name="edit_title_hint">Please input title of recording</string>
     <string name="view_title_hint">None title of recording</string>
     <string name="edit_content_hint">Please input content of recording</string>
-    <string name="text_cancel">×</string>
-    <string name="text_clock">口</string>
-    <string name="text_color">T</string>
-    <string name="text_confirm">√</string>
     <string name="alarm_clock">Alarm Clock</string>
-
-    <string name="set_alarm_clock">set alarm clock</string>
+    <string name="set_alarm_clock">set an alarm clock</string>
     <string name="ringtone_reminder">Ringtone reminder</string>
     <string name="pop_ups_reminder">Pop-ups reminder</string>
 
