--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,14 @@
     <string name="expand_icon">expand icon</string>
     <string name="start_default">start default</string>
 
+    <!--guide string -->
+    <string name="guide_image">guide image</string>
+    <string name="guide_title_1">强大的任务设置功能</string>
+    <string name="guide_title_2">方便的清单列表</string>
+    <string name="guide_title_3">多种记录方式</string>
+    <string name="guide_content_1">让您应对工作游刃有余</string>
+    <string name="guide_content_2">让您的工作和生活井井有条</string>
+    <string name="guide_content_3">让您可以随心所欲地进行记录</string>
+    <string name="guide_button">立即体验</string>
+
 </resources>
