--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,8 @@
     <string name="main_add_task">Add a new task</string>
     <string name="main_add_list">Add a new list</string>
     <string name="main_add_note">Add a new note</string>
-
+    <string name="main_finish_dialog_message">Do you want to finish the task ?</string>
+    <string name="main_finish_dialog_title">Finish</string>
     <string name="expand_icon">expand icon</string>
     <string name="start_default">start default</string>
 
