--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- common string -->
-    <string name="cancer">Cancle</string>
+    <string name="cancel">Cancle</string>
     <string name="confirm">Confirm</string>
     <string name="state">state</string>
     <string name="title">title</string>
@@ -70,6 +70,9 @@
     <string name="audio_recording_btnText">press here to record</string>
     <string name="audio_finish">OK</string>
     <string name="audio_time_length">00:00:00</string>
+    <string name="audio_delete_title">Delete Audio</string>
+    <string name="audio_delete_tip">Do you want to delete the audio?</string>
+
 
     <!-- photo string -->
     <string name="photo_gallery">GALLERY</string>
