the style of calendar has been modified.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="calendar_thursday">Thur</string>
     <string name="calendar_friday">Fri</string>
     <string name="calendar_saturday">Sat</string>
+    <string name="back_top">back to the top</string>
     <string name="title_date">%1$s  %2$dth,%3$d</string>
 
     <!-- audio string -->
