--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="list_hint_title">Please input title of list</string>
     <string name="expand_icon">expand icon</string>
     <string name="start_default">start default</string>
+    <string name="list_add_item">Add a item</string>
 
     <!-- task string -->
     <string name="edit_title_hint">Please input title of recording</string>
@@ -61,7 +62,6 @@
     <string name="calendar_friday">Fri</string>
     <string name="calendar_saturday">Sat</string>
     <string name="back_top">back to the top</string>
-    <string name="title_date">%1$s  %2$dth,%3$d</string>
 
     <!-- audio string -->
     <string name="audio">audio</string>
