--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="save_failed_notice">save failed</string>
     <string name="empty_text_notice">save failed for empty text</string>
     <string name="no_selectd_text">no select text!</string>
+    <string name="urgent">urgent</string>
 
     <!-- alarm string -->
     <string name="alarm_clock">Alarm Clock</string>
