--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="note_delete_tip">Do you wan to delete the note?</string>
     <string name="delete_success_notice">Delete successful</string>
     <string name="delete_failed_notice">Delete failed</string>
+    <string name="share_stamp">share from \"ohMemo\"</string>
+    <string name="welcome_hint">Welcome to use ohMemo!</string>
 
     <!-- alarm string -->
     <string name="alarm_clock">Alarm Clock</string>
