--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="expand_icon">expand icon</string>
     <string name="start_default">start default</string>
     <string name="list_add_item">Add a item</string>
+    <string name="list_delete_tip">Do you want to delete the list</string>
 
     <!-- task string -->
     <string name="edit_title_hint">Please input content of title</string>
