--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,6 @@
     <string name="main_no_data_list_bottom">Lists will appear here</string>
     <string name="main_delete">Delete</string>
 
-
     <!-- list string -->
     <string name="list_hint_title">Please input title of list</string>
     <string name="expand_icon">expand icon</string>
@@ -53,7 +52,7 @@
     <string name="save_successful_notice">save successful</string>
     <string name="save_failed_notice">save failed</string>
     <string name="empty_text_notice">save failed for empty text</string>
-    <string name="no_selectd_text">no select text!</string>
+    <string name="no_selected_text">Please select a passage</string>
     <string name="urgent">urgent</string>
     <string name="task_delete_title">Delete Task</string>
     <string name="task_delete_tip">Do you wan to delete the task?</string>
@@ -119,5 +118,6 @@
     <string name="share_icon">share icon</string>
     <string name="save_icon">save icon</string>
     <string name="group_icon">group icon</string>
+    <string name="image_icon">image icon</string>
 
 </resources>
