--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="save_successful_notice">save successful</string>
     <string name="save_failed_notice">save failed</string>
     <string name="empty_text_notice">save failed for empty text</string>
-    <string name="no_selectd_text">no select text!</string>
+    <string name="no_selectd_text">Please select a passage first!</string>
     <string name="urgent">urgent</string>
     <string name="task_delete_title">Delete Task</string>
     <string name="task_delete_tip">Do you wan to delete the task?</string>
@@ -90,6 +90,8 @@
     <string name="calendar_friday">Fri</string>
     <string name="calendar_saturday">Sat</string>
     <string name="month_year">%1$s %2$2s</string>
+    <string name="guide_hint">You can take multiple selections to check the records for many days</string>
+    <string name="guide_ok">Understood</string>
 
     <!-- audio string -->
     <string name="audio">audio</string>
